# funnyalexander

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6b8962121782_added_username_field_with_server_.py  92c660f454b9_initial.py  aafd80e31204_created_user_and_item_tables.py  ec9e99a2471e_user_username_is_unique_and_index.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py
backend/app/core/: config.py  database.py
funnyalexander/: asgi.py  settings.py  urls.py  wsgi.py
movies/: models.py
movies/migrations/: 0001_initial.py
tests/: test_movies.py  test_users.py
users/: models.py
users/migrations/: 0001_initial.py
