[tool.poetry]
name = "funnyalexander"
version = "0.1.0"
description = ""
authors = ["Nikita Semenov <nasemenov726@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
