[project]
name = "funnyalexander"
version = "1.0.0"
description = "A random movie for day"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[tool.uv]
default-groups = ["lint", "test"]

[dependency-groups]
lint = [
    "codespell>=2.4.1",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
test = [
    "pytest>=8.3.4",
    "pytest-django>=4.10.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "funnyalexander.settings"
